# website

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Justfile  LICENSE  README.md  build  build.nix  config.toml  default.nix  deps.nix  flake.nix  shell.nix
cli/src/stdout_cli/: Cargo.toml
cli/src/stdout_cli/src/: cmd.rs  cmds.rs  main.rs
cli/src/stdout_cli/src/cmds/: build.rs  serve.rs
cli/src/stdout_compiler/: Cargo.toml
cli/src/stdout_compiler/src/: input.rs
cli/src/stdout_compiler/src/input/posts/: repository.rs
cli/src/stdout_compiler/src/input/posts/repository/: find.rs  load.rs
cli/src/stdout_compiler/src/input/posts/repository/load/: parse.rs  render.rs
cli/src/stdout_compiler/src/input/templates/: repository.rs
cli/src/stdout_compiler/src/output/: site_compiler.rs  theme_compiler.rs
src/engine/horizon/: Cargo.toml  render-post.nix
src/engine/horizon/rust/common/: Cargo.toml
src/engine/horizon/rust/common/src/: lib.rs
src/engine/horizon/rust/render-feed/: Cargo.toml
src/engine/horizon/rust/render-feed/src/: main.rs
src/engine/horizon/rust/render-post/: Cargo.toml
src/engine/horizon/rust/render-post/src/: main.rs  result.rs  scanner.rs  span.rs
src/engine/horizon/rust/render-post/src/printer/: add_h2.rs  add_listing.rs  add_note.rs  add_ref.rs  add_video.rs
src/engine/horizon/rust/render-post/src/tests/ok-h2/: given.stdin  (+1 more)
src/engine/horizon/src/: main.rs  render_feed.rs  render_post.rs  utils.rs
src/engine/horizon/src/render_post/: node.rs  printer.rs  result.rs  scanner.rs
src/engine/horizon/src/render_post/printer/: a.rs  add_a.rs  add_code.rs  add_code_title.rs  add_hdr.rs  add_note.rs  add_p.rs  add_ref.rs  add_shdr.rs  add_video.rs  code.rs  code_title.rs  hdr.rs  note.rs  p.rs  ref.rs  shdr.rs  toc.rs  video.rs
src/engine/horizon/src/render_post/tests/err-code-with-two-fragments/: expected.nodes  expected.stderr  given.stdin
src/engine/horizon/src/render_post/tests/err-overwritten-ref/: expected.nodes  given.stdin
src/engine/horizon/src/render_post/tests/err-unused-ref/: expected.nodes
src/engine/horizon/src/render_post/tests/err-unused-ref-1/: expected.nodes  expected.stderr
src/engine/horizon/src/render_post/tests/err-unused-ref-2/: expected.nodes  expected.stderr
src/engine/horizon/src/render_post/tests/ok-a/: expected.nodes
src/engine/horizon/src/render_post/tests/ok-a-with-implied-href/: expected.nodes
src/engine/horizon/src/render_post/tests/ok-code/: expected.nodes  expected.stdout  given.stdin
src/engine/horizon/src/render_post/tests/ok-hdr/: expected.nodes  given.stdin
src/engine/horizon/src/render_post/tests/ok-img/: expected.nodes
src/engine/horizon/src/render_post/tests/ok-note/: expected.nodes  expected.stdout  given.stdin
src/engine/horizon/src/render_post/tests/ok-ref/: expected.nodes
src/engine/horizon/src/render_post/tests/ok-shdr/: expected.nodes  expected.stdout  given.stdin
src/engine/horizon/src/render_post/tests/ok-smoke/: expected.nodes
src/engine/horizon/src/render_post/tests/ok-toc/: expected.nodes  expected.stdout  given.stdin
src/engine/horizon/src/render_post/tests/ok-video/: expected.nodes
src/engine/horizon/src/utils/: env.rs
src/framework/feed/generate-feed/: Cargo.toml  rust-toolchain
src/framework/feed/generate-feed/src/: main.rs
src/stdout_cli/: Cargo.toml
src/stdout_cli/src/: args.rs  context.rs  main.rs
src/stdout_cli/src/cmds/: build.rs  watch.rs
src/utils/sak/: Cargo.toml
src/utils/sak/src/: cmds.rs  env.rs  main.rs
src/utils/sak/src/cmds/: compile_feed.rs  compile_post.rs
src/utils/sak/src/cmds/compile_post/: dom.rs  msg.rs  printer.rs  scanner.rs
src/utils/sak/src/cmds/compile_post/printer/: process_a.rs  process_generic.rs  process_header.rs  process_listing.rs  process_listing_title.rs  process_note.rs  process_ref.rs
(+423 files in other folders)
