[package]
name = "stdout"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
glob = "0.3"
html-minifier = "1.2"
notify = "4.0"
paw = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", features = ["paw"] }
tera = "1.2"
thiserror = "1.0"