[package]
name = "stdout_cli"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
notify = "4.0"
pathdiff = "0.1"
paw = "1.0"
stdout_compiler = { path = "../stdout_compiler" }
structopt = { version = "0.3", features = ["paw"] }