[package]
name = "horizon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ariadne = "0.5.1"
chrono = "0.4.35"
clap = { version = "4.5.40", features = ["derive"] }
itertools = "0.14.0"
pretty_assertions = "1.4.0"
rss = { version = "2.0.7", features = ["atom", "validation"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
test-case = "3.3.1"
