[package]
name = "generate-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
rss = { version = "2", features = ["atom", "validation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
voca_rs = "1"

[dev-dependencies]
itertools = "0.10"
pretty_assertions = "1"
