[package]
name = "render-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.35"
common = { path = "../common" }
rss = { version = "2.0.7", features = ["atom", "validation"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
test-case = "3.3.1"
